# dc24-wallet-issuer

./: .env.example  .gitignore  Dockerfile  README.md  add_requirements.sh  ai-generert.py  fly.toml  generate_certificate.py  main.py  pyproject.toml  requirements.tx.test  requirements.txt
COSE-testing/: 1.py  3.py  deleteme.py  deleteme2.py
app/: route_dynamic.py
app/config/: credential-metadata.json  credential-offer.json  identity-provider.json  metadata.json
app/keys/: ca-cert.p12  certificate.crt  certificate.csr  certificate.der  certificate.pem  private.key  private_key.pem  public.key  public_key.pem
app/model/: credential.py
app/routes/: oauth.py  oid4vci.py
app/service/: credential_service.py  metadata_service.py  misc.py  oauth_service.py  qr_code_service.py
templates/: home.html  qr_code.html
