[tool.poetry]
name = "app"
version = "0.1.0"
description = "OID4VCI"
authors = ["BrageNTNU <bragehk@stud.ntnu.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.4.0"
authlib = "1.3.1"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
dnspython = "2.6.1"
email-validator = "2.2.0"
fastapi = "0.111.1"
fastapi-cli = "0.0.4"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jwt = "1.3.1"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
pillow = "10.4.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pygments = "2.18.0"
pypng = "0.20220715.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
qrcode = "7.4.2"
requests = "2.32.3"
rich = "13.7.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
starlette = "0.37.2"
typer = "0.12.3"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
uvicorn = "0.30.3"
uvloop = "0.19.0"
watchfiles = "0.22.0"
websockets = "12.0"
pycose = "1.0.1"
cbor2 = "5.4.6"
cryptography = "39.0.0"
cbor-diag = "^1.0.2"
asn1crypto = "1.5.1"
attrs = "23.2.0"
cached-property = "1.5.2"
certvalidator = "0.11.1"
cwt = "2.3.1"
ecdsa = "0.19.0"
oscrypto = "1.3.0"
pyhpke = "0.4.1"
python-pkcs11 = "0.7.0"
six = "1.16.0"
pymdoccbor = {git = "https://github.com/peppelinux/pyMDOC-CBOR.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
